k8s-security-framework/policies/pod-security/KSP-POD-001/tests/boundary-pass-additional-edge-case.yaml
apiVersion: v1
kind: Pod
metadata:
  name: pod-001-boundary-containers-additional-boundary-pass
  namespace: policy-test
spec:
  containers:
  - name: demo-api
    image: harbor.example.com/demo-api:1.0.0
    securityContext:
      runAsNonRoot: true
  initContainers:
  - name: init
    image: harbor.example.com/demo-api:1.0.0
    securityContext:
      runAsNonRoot: true
