k8s-security-framework/policies/pod-security/KSP-POD-001/tests/boundary-pod-level-with-container-false.yaml
apiVersion: v1
kind: Pod
metadata:
  name: pod-001-boundary-pod-level-container-false
  namespace: policy-test
spec:
  securityContext:
    runAsNonRoot: true
  containers:
    - name: demo-api
      image: harbor.example.com/demo-api:1.0.0
      securityContext:
        runAsNonRoot: false
