k8s-security-framework/policies/pod-security/KSP-POD-001/tests/exception-policy-for-specific-resources.yaml
apiVersion: policies.kyverno.io/v1
kind: PolicyException
metadata:
  name: require-run-as-non-root-exception
  namespace: policy-test
spec:
  policyRefs:
  - name: require-run-as-non-root
    kind: ValidatingPolicy
  matchConditions:
  - name: match-exempt-resource
    expression: object.metadata.name in ['ksp-pod-001-exception', 'ksp-pod-001-exception-secondary',
      'ksp-pod-001-exception-tertiary'] && object.metadata.namespace == 'policy-test'
