k8s-security-framework/policies/pod-security/KSP-POD-001/tests/exception-resources-with-policy-violation.yaml
apiVersion: v1
kind: Pod
metadata:
  name: ksp-pod-001-exception
  namespace: policy-test
spec:
  containers:
  - name: demo-api
    image: harbor.example.com/demo-api:1.0.0
---
apiVersion: v1
kind: Pod
metadata:
  name: ksp-pod-001-exception-secondary
  namespace: policy-test
spec:
  containers:
  - name: demo-api
    image: harbor.example.com/demo-api:1.0.0
---
apiVersion: v1
kind: Pod
metadata:
  name: ksp-pod-001-exception-tertiary
  namespace: policy-test
spec:
  containers:
  - name: insecure
    image: harbor.example.com/insecure:1.0.0
    securityContext:
      runAsNonRoot: false
  - name: secure
    image: harbor.example.com/secure:1.0.0
    securityContext:
      runAsNonRoot: true
