k8s-security-framework/policies/pod-security/KSP-POD-001/tests/negative-ephemeral-container-non-root-false.yaml
apiVersion: v1
kind: Pod
metadata:
  name: pod-001-negative-ephemeral-container-false
  namespace: policy-test
spec:
  containers:
    - name: demo-api
      image: harbor.example.com/demo-api:1.0.0
      securityContext:
        runAsNonRoot: true
  ephemeralContainers:
    - name: debugger
      image: harbor.example.com/debugger:1.0.0
      command: ["sh"]
      securityContext:
        runAsNonRoot: false
