k8s-security-framework/policies/pod-security/KSP-POD-001/tests/positive-all-container-types-with-non-root.yaml
apiVersion: v1
kind: Pod
metadata:
  name: pod-001-positive-all-container-types
  namespace: policy-test
spec:
  containers:
    - name: demo-api
      image: harbor.example.com/demo-api:1.0.0
      securityContext:
        runAsNonRoot: true
  initContainers:
    - name: init
      image: harbor.example.com/init:1.0.0
      securityContext:
        runAsNonRoot: true
  ephemeralContainers:
    - name: debugger
      image: harbor.example.com/debugger:1.0.0
      command: ["sh"]
      securityContext:
        runAsNonRoot: true
