k8s-security-framework/policies/pod-security/KSP-POD-001/tests/positive-one-container-with-non-root.yaml
apiVersion: v1
kind: Pod
metadata:
  name: pod-001-positive-one-container-non-root
  namespace: policy-test
spec:
  containers:
    - name: demo-api
      image: harbor.example.com/demo-api:1.0.0
      securityContext:
        runAsNonRoot: true
