k8s-security-framework/policies/pod-security/KSP-POD-001/tests/positive-pod-level-run-as-non-root.yaml
apiVersion: v1
kind: Pod
metadata:
  name: pod-001-positive
  namespace: policy-test
spec:
  securityContext:
    runAsNonRoot: true
  containers:
    - name: demo-api
      image: nginx:1.27
