k8s-security-framework/policies/pod-security/KSP-POD-001/tests/positive-pod-level-with-two-containers.yaml
apiVersion: v1
kind: Pod
metadata:
  name: pod-001-positive-pod-level-two-containers
  namespace: policy-test
spec:
  securityContext:
    runAsNonRoot: true
  containers:
    - name: demo-api
      image: harbor.example.com/demo-api:1.0.0
    - name: sidecar
      image: harbor.example.com/sidecar:1.0.0
